--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+   "node" : "8.9.x"
+  },
   "dependencies": {
     "accepts": "^1.3.4",
     "body-parser": "^1.18.2",
@@ -26,10 +29,12 @@
     "jasmine-spec-reporter": "^4.2.1",
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3",
+    "standard": "^10.0.3",
     "tui-jsdoc-template": "^1.2.2"
   },
   "scripts": {
     "test": "istanbul cover -x ./  --report text --report lcov jasmine test/**/**/*_[sS]pec.js",
+    "standard" : "standard ./src/utils/*.js",
     "start": "nodemon index.js",
     "gen-doc": "apidoc -i src/ -o apidoc/ && jsdoc -c ./jsdoc_conf.json"
   },
