--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "minami": "^1.2.3",
     "mochawesome": "^2.3.1",
     "nyc": "^11.5.0",
-    "serve": "^6.0.6",
+    "serve": ">=7.0.0",
     "tui-jsdoc-template": "^1.2.2"
   },
   "scripts": {
